--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-This assumes you have a postgres database running on your docker host already
-
-docker build -t rav .
-docker run -e DB_DSN=postgres://DB_USER:DB_PASS@172.17.0.1:5432/rav -p 127.0.0.1:8810:8000 -v /data/rav/avatars:/data -t rav
+```
+mkdir data
+echo "Some secret thing" > data/secret.txt
+python3 -m venv venv
+venv/bin/pip install -r requirements.txt
+venv/bin/flask --debug run
+```
